--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="Precio">Precio</string>
     <string name="Cantidad">Cantidad</string>
 
+    <string name="Compras">Compras</string>
+
 </resources>
